--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8413,8 +8413,13 @@ body {
 
 /* User profile page */
 
-.users-show-page .user-info .thumbnail {
-  margin-bottom: 0px;
+.users-show-page .meta {
+  font-size: .9em;
+  color: #b3b3b3;
+}
+
+.users-show-page .reply-content {
+  margin: 6px 0;
 }
 
 /* Topic Index Page */
@@ -8964,5 +8969,19 @@ body {
   margin: 0.4em auto 0.6em;
   font-size: 28px;
   line-height: 38px;
+}
+
+.topic-reply hr {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.topic-reply a {
+  color: inherit;
+}
+
+.topic-reply .meta {
+  font-size: .9em;
+  color: #b3b3b3;
 }
 
