--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -70,10 +70,12 @@ body {
 
 /* User profile page */
 .users-show-page {
-    .user-info {
-        .thumbnail {
-            margin-bottom: 0px;
-        }
+    .meta {
+        font-size: .9em;
+        color: #b3b3b3;
+    }
+    .reply-content {
+        margin: 6px 0;
     }
 }
 
@@ -173,5 +175,21 @@ body {
             font-size: 28px;
             line-height: 38px;
         }
+    }
+}
+
+.topic-reply {
+    hr {
+        margin-top: 16px;
+        margin-bottom: 16px;
+    }
+
+    a {
+        color: inherit;
+    }
+
+    .meta {
+        font-size: .9em;
+        color: #b3b3b3;
     }
 }
